# largo

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-app.yml
largo/: __cli__.py  __init__.py  balance_sheet.py  bs_command.py  cash_flow.py  cf_command.py  date_range.py  ledger_invoke.py  pl_command.py  profit_loss.py  project.py
tests/: conftest.py  test_balance_sheet.py  test_cash_flow.py  test_date_range.py  test_largo.py  test_pl_command.py  test_profit_loss.py  test_project.py
tests/data/japanese-manifest/: Largo.toml
tests/data/japanese-manifest/book/: 2021.ledger
tests/data/non-numeric-books/: Largo.toml
tests/data/simple-project/: Largo.toml
