[tool.poetry]
name = "largo"
version = "0.1.0"
description = ""
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]

[tool.poetry.scripts]
largo = "largo.__cli__:main"

[tool.poetry.dependencies]
python = "^3.9"
cleo = "^0.8.1"
pytest-datadir = "^1.3.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
