[tool.poetry]
name = "largo"
version = "0.1.0"
description = ""
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]

[tool.poetry.scripts]
largo = "largo.__cli__:main"

[tool.poetry.dependencies]
python = "^3.10"
cleo = "^0.8.1"
pytest-datadir = "^1.3.1"
toml = "^0.10.2"
mypy = "^0.920"
pyright = "^0.0.13"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[[tool.mypy.overrides]]
module = ["cleo"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.pyright]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
